# sentiment-analysis-agent-openAI-SDK

./: .gitignore  AGENTS.md  README.md  SPECS.md  pyproject.toml
docs/: AGENTS.md  index.md
docs/api/: data-services.md
docs/guides/: data-services.md
docs/reference/: configuration.md
docs/specs/: openai-agents-sentiment-agent.md
examples/: test_pipeline_example.py  test_sources.py
sentiment_analysis_agent/: __init__.py  config.py
sentiment_analysis_agent/agents/: __init__.py  base.py  openai_adapter.py  sentiment_agent.py
sentiment_analysis_agent/data_services/: __init__.py  alpha_vantage.py  base.py  bing_news.py
sentiment_analysis_agent/data_services/mocks/: alpha_vantage_mock.py
sentiment_analysis_agent/models/: __init__.py  agent_models.py  sentiment_analysis.py  sentiment_analysis_models.py
sentiment_analysis_agent/pipeline/: __init__.py  config.py  models.py  sentiment_aggregator.py  sentiment_scorer.py
sentiment_analysis_agent/tools/: analyze_sentiment.py
tests/: AGENTS.md  conftest.py  test_analyze_sentiment_tool.py  test_bing_news.py  test_sentiment_agent.py  test_sentiment_aggregator.py  test_sentiment_models.py  test_sentiment_pipeline.py
